# exafmm

./: #configure.ac#  .gitignore  Makefile.am  Makefile.am.include  Makefile.in  OSX-YOSEMITE-BREW-CONFIG  aclocal.m4  config.h  config.h.in  configure  configure.ac
examples/: Makefile.in  ewald_mpi  fmm.cxx  fmm_mpi.cxx  helmholtz_spherical_mpi  laplace_cartesian_mpi  laplace_spherical_mpi
examples/ewald_mpi.dSYM/Contents/: Info.plist
examples/ewald_mpi.dSYM/Contents/Resources/DWARF/: ewald_mpi
examples/helmholtz_spherical.dSYM/Contents/: Info.plist
examples/helmholtz_spherical.dSYM/Contents/Resources/DWARF/: helmholtz_spherical
examples/helmholtz_spherical_kernel.dSYM/Contents/: Info.plist
examples/helmholtz_spherical_kernel.dSYM/Contents/Resources/DWARF/: helmholtz_spherical_kernel
examples/helmholtz_spherical_mpi.dSYM/Contents/: Info.plist
examples/helmholtz_spherical_mpi.dSYM/Contents/Resources/DWARF/: helmholtz_spherical_mpi
examples/laplace_cartesian.dSYM/Contents/: Info.plist
examples/laplace_cartesian.dSYM/Contents/Resources/DWARF/: laplace_cartesian
examples/laplace_cartesian_kernel.dSYM/Contents/: Info.plist
examples/laplace_cartesian_kernel.dSYM/Contents/Resources/DWARF/: laplace_cartesian_kernel
examples/laplace_cartesian_mpi.dSYM/Contents/: Info.plist
examples/laplace_cartesian_mpi.dSYM/Contents/Resources/DWARF/: laplace_cartesian_mpi
examples/laplace_spherical.dSYM/Contents/: Info.plist
examples/laplace_spherical.dSYM/Contents/Resources/DWARF/: laplace_spherical
examples/laplace_spherical_kernel.dSYM/Contents/: Info.plist
examples/laplace_spherical_kernel.dSYM/Contents/Resources/DWARF/: laplace_spherical_kernel
examples/laplace_spherical_mpi.dSYM/Contents/: Info.plist
examples/laplace_spherical_mpi.dSYM/Contents/Resources/DWARF/: laplace_spherical_mpi
examples/tree.dSYM/Contents/Resources/DWARF/: tree
gpu/: dataset.h
include/: args.h  build_tree_omp.h  dataset.h  ewald.h  kernel.h  logger.h  nodeinfo.h  types.h  vec.h
kernels/: HelmholtzSphericalCPU.cxx
uniform/: Makefile.in
uniform/fmm.dSYM/Contents/Resources/DWARF/: fmm
uniform/fmm_ijhpca.dSYM/Contents/: Info.plist
uniform/fmm_mpi.dSYM/Contents/: Info.plist
wrappers/: Makefile.am  Makefile.in  petiga.cxx  pythonMes.cxx  pythonMesSer.cxx  pythonStructTest.py  test_mpi.cxx  test_petiga.cxx  test_pythonMes.cxx  test_pythonMesSer.cxx  vmmc.cxx
wrappers/gromacs.dSYM/Contents/: Info.plist
wrappers/gromacs.dSYM/Contents/Resources/DWARF/: gromacs
wrappers/optimize/: TTF.eps
wrappers/petiga.dSYM/Contents/: Info.plist
wrappers/petiga.dSYM/Contents/Resources/DWARF/: petiga
(+2 files in other folders)
